AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=spider
spider_SOURCES=spider.c spider.h  options.h lock.h const.h linkedlist.h threadprivdata.h  threadprivdata.c  utils.h utils.c strings.h strings.c  logger.h logger.c  config.h config.c thread.h thread.c socket.h socket.c times.h  poll.h poll.c tcp_engine.h tcp_engine.c 

LIBS += -lpthread 
